--- a/.env.sh.template
+++ b/.env.sh.template
@@ -4,18 +4,18 @@ APIHOST="localhost"
 #URLSCHEME="https"
 #APIHOST="$(docker-machine ip)"
 DEFAULT_LISTENER_HOST=0.0.0.0
-DEFAULT_LISTENER_PORT=qube_listener_port
+DEFAULT_LISTENER_PORT=8191
 DEFAULT_PROCESS_COUNT=10
 RUN_FROM_REMOTE_REGISTRY=0
-QUBE_SERVICE_LISTENER_PORT=qube_listener_port
-QUBE_SERVICE_BASE_NAME=`cat ./qube.yaml  | grep ^name  | grep -v "\- name" | awk '{print $2}'`
-QUBE_SERVICE_DOCKER_IMAGE_LOCAL=$QUBE_SERVICE_BASE_NAME
-QUBE_SERVICE_DOCKER_IMAGE=gcr.io/qubeship/qube_placeholder
-QUBE_SERVICE_IMAGE_VERSION=latest
-QUBE_SERVICE_IMAGE=qube_placeholder
-QUBE_SERVICE_MONGOALCHEMY_DATABASE=hello
-QUBE_SERVICE_MONGOALCHEMY_CONNECTION_STRING=mongodb://mongo:27017/hello
-QUBE_SERVICE_MONGOALCHEMY_SERVER=mongo
-QUBE_SERVICE_MONGOALCHEMY_PORT=27017
+JEFF2_LISTENER_PORT=8191
+JEFF2_BASE_NAME=`cat ./qube.yaml  | grep ^name  | grep -v "\- name" | awk '{print $2}'`
+JEFF2_DOCKER_IMAGE_LOCAL=$JEFF2_BASE_NAME
+JEFF2_DOCKER_IMAGE=gcr.io/qubeship/jeff2
+JEFF2_IMAGE_VERSION=latest
+JEFF2_IMAGE=jeff2
+JEFF2_MONGOALCHEMY_DATABASE=jeff2
+JEFF2_MONGOALCHEMY_CONNECTION_STRING=mongodb://mongo:27017/jeff2
+JEFF2_MONGOALCHEMY_SERVER=mongo
+JEFF2_MONGOALCHEMY_PORT=27017
 
 TOKEN=
